# failure_prediction

./: README.md  demo_data.csv  pyproject.toml
app/: app.py
data/: processed_sensor_data.csv  sensor_data.csv
models/: isolation_forest_model.pkl  preprocess.py  train.py
